--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
     justify-content: space-around;
     text-align: center;
     width: 100%;
+    height: 100%;
 }
 .logo {
     margin-bottom: 1rem;
@@ -58,8 +59,8 @@ body {
     align-items: center;
 }
 .logo img {
-    width: 250px;
-    height: 250px;
+    width: 30%;
+    height: auto;
     border-radius: 50%;
     object-fit: cover;
 }
